syntax = "proto3";

package xbasissvc.external.application;

import "konekko.me/xbasis/commons/dto/commons.proto";
//import "konekko.me/gosion/application/pb/settings.proto";

service Application {

    rpc Create (CreateRequest) returns (xbasis.commons.dto.Status);

    rpc Remove (RemoveRequest) returns (xbasis.commons.dto.Status);

    rpc ChangeName (ChangeNameRequest) returns (xbasis.commons.dto.Status);

    rpc FindByAppId (FindRequest) returns (SimpleApplicationResponse);

    rpc FindByClientId (FindRequest) returns (SimpleApplicationResponse);

    rpc List (FindRequest) returns (ListResponse);

    rpc Switch (SwitchRequest) returns (xbasis.commons.dto.Status);

}

message SwitchRequest {
    string appId = 1;
    bool enabled = 2;
}

message FindRequest {
    string content = 1;
}

message ListResponse {
    xbasis.commons.dto.State state = 1;
    repeated AppInfo info = 2;
}

message SimpleApplicationResponse {
    xbasis.commons.dto.State state = 1;
    AppInfo info = 2;
}

message CreateRequest {
    string name = 1;
    string desc = 2;
    bool open = 3;
    string url = 4;
    string syncUrl = 5;
}

message RemoveRequest {
    string appId = 1;
}

message ChangeNameRequest {
    string appId = 2;
    string name = 3;
}

message AppInfo {
    string name = 1;
    string desc = 2;
    string appId = 3;
    int64 enabled = 4;
    int64 createAt = 5;
    repeated AppClientInfo clients = 6;
    xbasis.commons.dto.AppSettings settings = 7;
    string createUserId = 8;
    string type = 9;
}

message AppClientInfo {
    string clientId = 1;
    int64 enabled = 2;
    int64 platform = 3;
}
